--- a/index.html
+++ b/index.html
@@ -45,9 +45,10 @@
             <div class="snake-container">
                 <span class="snake"></span>
                 <span class="snake"></span>
-                <span class="snake"></span>
-
+                <span id="head" class="snake"></span>
             </div>
+            <span id="dot"></span>
+
             <!-- <button id="button">Start game</button> -->
         </div>
     </div>
