--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
             max-width: 600px;
             height: 600px;
             position: relative;
+            border:1px solid black
         }
 
         #dot {
