--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <div class="snake-container">
             <span class="snake"></span>
             <span class="snake"></span>
-            <span id="head" class="snake"></span>
+            <span class="snake" id="snake-head" ></span>
         </div>
         <span id="dot"></span>
     </div>
